[delivers #181395783 #181425932] Added modal box with Country List, fixed layout bug.

--- a/css/convertstyle.css
+++ b/css/convertstyle.css
@@ -15,7 +15,6 @@ main {
   padding: 1%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-break: loose;
-  line-height: 20px;
 }
 
 /* Styling for Header 1 */
@@ -85,6 +84,7 @@ footer {
   color: #b4c5e4;
   font-size: 18px;
   padding: 1%;
+  text-align: center;
 }
 
 /* Administration Link in Footer */
@@ -110,13 +110,74 @@ table td {
   color: #3c3744;
 }
 
+/* Formatting each line of the input currency form */
+.form-line {
+  margin: 1em 0;
+}
+
+/* Country List Button */
+#btn-country-list {
+  display: inline-block;
+  margin: 1em 0;
+}
+
+/* back drop */
+.modal-box {
+  display: none;
+  position: fixed;
+  color: #000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: none;
+  background-color: #0009;
+}
+
+/* modal box */
+#modal-content-box {
+  background-color: #bcc0f0;
+  margin: 5% auto;
+  padding: 20px;
+  width: 200px;
+  border: 1px solid black;
+}
+
+.modal-close {
+  float: right;
+  color: black;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* element created in modal.js */
+.model-country-div {
+  display: flex;
+  justify-content: baseline;
+  margin: 15px 0;
+}
+
+/* element created in modal.js */
+.modal-flags {
+  margin: 0 15px;
+  height: 22px;
+  width: 40px;
+}
+
 /* Original Currency Country and Type */
 #original-currency-name {
   display: inline-block;
 }
 
 /* Initially Hide Fields */
-#currency-country-div,
+#input-convert-to-country-div,
+#btn-submit,
 #converted-results {
   display: none;
 }
